<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoginApp</string>
    <string name="secure_login">SECURE LOGIN</string>
    <string name="subtitle">Enter your credentials to continue</string>
    <string name="username_email">USERNAME / EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login_type">LOGIN TYPE</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
</resources>
